# modules-watcher

./: .gitignore  .gitpod.yml  CHANGELOG.md  Cargo.old.toml  Cargo.toml  README.md  cliff.toml  index.d.ts  index.js  modules-watcher.darwin-arm64.node  modules-watcher.linux-x64-gnu.node  modules-watcher.win32-x64-msvc.node  package.json  sample.js  tsconfig.json
.github/workflows/: CI.yml
benches/: bench.rs  make_changes.rs  make_entries.rs
js_watcher/: Cargo.toml  index.d.ts  index.js  package.json  sample.js
js_watcher/benches/: bench.rs  checksum.rs
js_watcher/examples/: make_entries.rs
js_watcher/npm/darwin-x64/: package.json
js_watcher/npm/linux-x64-gnu/: package.json
js_watcher/npm/win32-x64-msvc/: README.md  package.json
js_watcher/src/: entry.rs  file_item.rs  lib.rs  parser.rs  watch_info.rs  watcher.rs
js_watcher/src/utils/: path_clean.rs
js_watcher/tests/: modules-watcher.spec.ts
js_watcher/tests/demo/: run.js
js_watcher/tests/demo/__tests/: foo.tests.js
js_watcher/tests/fixtures/: cleanFixtures.js
js_watcher/tests/fixtures/fake_node_modules/exports_array/: package.json
js_watcher/tests/fixtures/fake_node_modules/exports_str/: package.json
js_watcher/tests/fixtures/fake_node_modules/nested/: package.json
js_watcher/tests/fixtures/project_a/: b.something.js  node_module.js  relative_w_ext.js  relative_w_index.js  relative_wo_ext_w_dot.js  require.js  timestamp.js  x.js  y.js  z.js  z2.js
js_watcher/tests/fixtures/project_a/c/: index.js  relative_parent.js
js_watcher/tests/fixtures/project_b/: a.js  b.js  d.js  e.js  file10.scss  file13.js  file4.js  file6.js  file7.js  file8.css  file9.css
js_watcher/tests/fixtures/project_b/file5/: index.js
js_watcher/tests/fixtures/project_c/: file2.js
js_watcher/tests/fixtures/project_d/: file1.js
js_watcher/tests/fixtures/project_e/: to-watch1.js
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: package.json
src/: entry.rs  lib.rs  parser.rs  watcher.rs
tests/: modules-watcher.spec.ts
tests/demo/__tests/: bar.tests.js
tests/fixtures/project_a/: b.js  dyn_import.js  many.js  project_path.js  relative_wo_ext.js  timestamp.js  y.js  y2.js  z.js  z2.js
tests/fixtures/project_b/: c.js  file3.js
tests/fixtures/project_c/: file1.js  to-watch1.js  to-watch2.js
(+9 files in other folders)
