[package]
edition = "2021"
name = "modules-watcher"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.0.4", default-features = false, features = ["napi4"] }
napi-derive = "2.0.8"
regex = "1"
lazy_static = "1.4.0"
rayon = "1.5"
dashmap = { version = "5.1.0", features = ["rayon"] }
glob = "0.3.0"
criterion = "0.3"
crc32fast = "1.3.2"
bincode = "1.3.3"
anyhow = "1.0.53"
hotwatch = "0.4.6"
notify = "4.0.17"
serde_json = "1.0.79"
memoize = "0.2.1"

[[bench]]
name = "bench"
harness = false

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
