[package]
name = "js_watcher"
version = "0.1.0"
edition = "2021"

[features]
without-napi = ["napi-derive/noop"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.0.4", default-features = false, features = ["napi4"] }
napi-derive = "2.0.8"
lazy_static = "1.4.0"
rayon = "1.5"
dashmap = { version = "5.1.0", features = ["rayon"] }
glob = "0.3.0"
crc32fast = "1.3.2"
notify = "4.0.17"
serde_json = "1.0.79"
memoize = "0.2.1"
nom = "7.1.0"

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
codegen-units = 1

[profile.test]
lto = true
codegen-units = 1

[[bench]]
name = "bench"
harness = false