[package]
name = "js_watcher"
version = "0.1.0"
edition = "2021"

[features]
without-napi = ["napi-derive/noop"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.13.3", default-features = false, features = ["napi4"] }
napi-derive = "2.13.0"
lazy_static = "1.4.0"
rayon = "1.5"
dashmap = { version = "5.1.0", features = ["rayon"] }
glob = "0.3.0"
crc32fast = "1.3.2"
serde_json = "1.0.79"
memoize = "0.2.1"
nom = "7.1.0"

[dev-dependencies]
criterion = "0.3"
memmap2 = "0.5.3"
wyhash = "0.5.0"

[build-dependencies]
napi-build = "2.0.1"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "checksum"
harness = false